--- a/assets/scss/wp-tiles.scss
+++ b/assets/scss/wp-tiles.scss
@@ -10,88 +10,12 @@
 /**************************************
     Admin
  **************************************/
-.grid-template-editor {
-    width: 100%;
-    height: 100px;
-
-    max-width: 100%;
-    font-family: monospace;
-    letter-spacing: 0.5em;
-}
-
-.wp-tiles-tile-letter {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-
-    margin: auto;
-    height: 1em;
-    width: 1em;
-
-    font-size: 2em;
-}
-
-.wp-tiles-container.wp-tiles-tile-demo {
-    height: 276px;
-    width:  276px;
-    margin: 0 auto;
-
-    .wp-tiles-tile {
-        background-color: rgb(51, 204, 204);
-        width: 266px;
-        height: 266px;
-        display: block;
-    }
-
-    .wp-tiles-tile-bg {
-        background-image: image-url('tile-demo-1.jpg');
-    }
-
-    .wp-tiles-byline {
-        background-color: rgba(51, 204, 204, 0.5);
-        overflow: hidden;
-    }
-}
+@import 'admin';
 
 /**************************************
     Frontend
  **************************************/
-.template-selector {
-    list-style: none;
-
-    li {
-        @include background-image(linear-gradient(#252525,#0A0A0A));
-        border: 1px solid #ffffff;
-
-        display: inline;
-        border-radius: 10px;
-        color: white;
-        cursor: pointer;
-        text-align: center;
-        padding: 6px 9px;
-
-        &:hover {
-            border: 1px solid #999999;
-        }
-    }
-}
-
-.wp-tiles-pagination {
-
-}
-
-.wp-tiles-pagination-ajax {
-    line-height: 24px;
-    text-align: center;
-
-    &.loading {
-        background: image-url('loading.gif') no-repeat 50%;
-        text-indent: -9999px;
-    }
-}
-
+@import 'template_selector';
 
 /* ==========================================================================
    Base Styles
@@ -113,114 +37,10 @@
     @include user-select ( none );
 }
 
-.wp-tiles-tile {
-    &.wp-tiles-legacy & {
-        @include box-shadow ( 6px 6px 10px );
-        &:hover {
-            outline: 1px solid #ccc;
-        }
-    }
-    position: absolute;
-    font-size: 13px;
-    background-color: #EEE;
-    padding: 0;
-    overflow: hidden;
-    cursor: pointer;
 
-}
-
-.wp-tiles-byline {
-    max-height: 100%;
-}
-
-/* ==========================================================================
-   BASE: Tile with BG image
-   ========================================================================== */
-.wp-tiles-tile-bg {
-    position: absolute;
-    top: 0; left: 0; right: 0; bottom: 0;
-    background-size: cover;
-    background-position: 50% 50%;
-}
-
-.wp-tiles-tile-with-image {
-
-    .wp-tiles-byline {
-        position: absolute;
-        left: 0;
-        right: 0;
-
-        .wp-tiles-byline-align-top & {
-            top: 0;
-        }
-        .wp-tiles-byline-align-bottom & {
-            bottom: 0;
-        }
-
-        background: rgba(0, 0, 0, 0.8);
-        padding: 5px;
-        max-height: 100%;
-    }
-
-    .wp-tiles-byline-title {
-    //h1, h2, h3, h4, h5, h6 {
-
-        //font-weight: 600;
-        margin: 0;
-
-        color: white;
-        overflow: hidden;
-        padding: 5px;
-        padding-top: 2px;
-    }
-
-    .wp-tiles-byline-content {
-        padding: 5px;
-        font-size: 10px;
-        font-weight: 600;
-        color: #EEE;
-
-        width: 90%;
-        overflow: hidden;
-
-        //white-space: nowrap;
-        //text-overflow: ellipsis;
-    }
-}
-/* ==========================================================================
-   BASE: Text Only
-   ========================================================================== */
-
-.wp-tiles-tile-text-only {
-    background-color: transparent;
-    width: 100%;
-    height: 100%;
-    opacity: 1;
-    padding: 5px;
-
-    .wp-tiles-byline {
-
-    }
-    .wp-tiles-byline-title {
-        margin: 0;
-        font-size: 1.5em;
-        line-height: 1.15em;
-        padding-top: 15px;
-        color: #282828;
-        width: 85%;
-        //height: 6.4em;
-    }
-
-    .wp-tiles-byline-content {
-        color: #303030;
-        font-style: normal;
-        font-size: 14px;
-        font-weight: 600;
-    }
-}
-
-
-
+@import 'tile';
+@import 'tile_image';
+@import 'tile_text_only';
 
 /* ==========================================================================
    Animations
@@ -234,121 +54,6 @@
     @include transform(translateY(0%));
 }
 
-/**************************************
-    BYLINE
- **************************************/
-.wp-tiles-byline-animated {
-    .wp-tiles-byline {
-        @extend %animated;
-    }
-}
-
-.wp-tiles-tile-with-image {
-    .wp-tiles-byline-slide-up & {
-        .wp-tiles-byline {
-            bottom: 0;
-            @include transform(translateY(100%));
-        }
-        &:hover .wp-tiles-byline{
-            @extend %no-translate;
-        }
-    }
-    .wp-tiles-byline-slide-down & {
-        .wp-tiles-byline {
-            top: 0;
-            @include transform(translateY(-100%));
-        }
-        &:hover .wp-tiles-byline{
-            @extend %no-translate;
-        }
-    }
-
-    .wp-tiles-byline-slide-left & {
-        .wp-tiles-byline {
-            right: -100%;
-            @include transform(translateX(100%));
-        }
-        &:hover .wp-tiles-byline{
-            @extend %no-translate;
-        }
-    }
-    .wp-tiles-byline-slide-right & {
-        .wp-tiles-byline {
-            @include transform(translateX(-100%));
-        }
-        &:hover .wp-tiles-byline{
-            @extend %no-translate;
-        }
-    }
-    .wp-tiles-byline-fade-in & {
-        .wp-tiles-byline {
-            opacity: 0;
-        }
-        &:hover .wp-tiles-byline{
-            opacity: 1;
-        }
-    }
-}
-
-/**************************************
-    IMAGE
- **************************************/
-.wp-tiles-image-animated {
-    .wp-tiles-tile-bg {
-        @extend %animated;
-    }
-}
-
-%scale-up {
-    @include transform(scale(1.2));
-}
-.wp-tiles-image-scale-up {
-    .wp-tiles-tile-bg {
-
-    }
-    .wp-tiles-tile:hover .wp-tiles-tile-bg {
-        @extend %scale-up;
-    }
-}
-.wp-tiles-image-scale-down {
-    .wp-tiles-tile-bg {
-        @extend %scale-up;
-    }
-    .wp-tiles-tile:hover .wp-tiles-tile-bg {
-        @include transform(scale(1));
-    }
-}
-
-%saturate {
-    filter: none;
-    -webkit-filter: grayscale(0%);
-}
-%desaturate {
-    /* Firefox 10+ */
-    filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='saturate' values='0.5'/></filter></svg>#grayscale");
-    /* IE6-9 */
-    filter: gray alpha(opacity=50);
-    /* Chrome 19+ & Safari 6+ */
-    -webkit-filter: grayscale(50%);
-    /* Fix for transition flickering */
-    -webkit-backface-visibility: hidden;
-}
-
-.wp-tiles-image-saturate {
-    .wp-tiles-tile-bg {
-        @extend %desaturate;
-    }
-    .wp-tiles-tile:hover .wp-tiles-tile-bg {
-        @extend %saturate;
-    }
-}
-
-.wp-tiles-image-desaturate {
-    .wp-tiles-tile-bg {
-        @extend %saturate;
-
-    }
-    .wp-tiles-tile:hover .wp-tiles-tile-bg {
-        @extend %desaturate;
-    }
-}
+@import 'animations_byline';
+@import 'animations_image';
+@import 'pagination';
