--- a/assets/scss/_pagination.scss
+++ b/assets/scss/_pagination.scss
@@ -6,6 +6,9 @@
 
 }
 
+/**************************************
+    Ajax Load More
+ **************************************/
 .wp-tiles-pagination-ajax {
     line-height: 24px;
     text-align: center;
@@ -13,5 +16,44 @@
     &.loading {
         background: image-url('loading.gif') no-repeat 50%;
         text-indent: -9999px;
+    }
+}
+
+
+/**************************************
+    Paging Navigation
+    (based on TwentyFourteen)
+ **************************************/
+
+.wp-tiles-paging-navigation {
+	//border-top: 5px solid #000;
+	//margin: 48px 0;
+
+    .loop-pagination {
+        margin-top: -5px;
+        text-align: center;
+    }
+
+    .page-numbers {
+        border-top: 5px solid transparent;
+        display: inline-block;
+        font-size: 14px;
+        font-weight: 900;
+        margin-right: 1px;
+        padding: 7px 16px;
+        text-transform: uppercase;
+    }
+
+    a {
+        color: #2b2b2b;
+    }
+
+    .page-numbers.current {
+        border-top: 5px solid #24890d;
+    }
+
+    a:hover {
+        border-top: 5px solid #41a62a;
+        color: #2b2b2b;
     }
 }
