Fix loading indicator

--- a/assets/scss/_pagination.scss
+++ b/assets/scss/_pagination.scss
@@ -10,7 +10,7 @@
     line-height: 24px;
     text-align: center;
 
-    .loading {
+    &.loading {
         background: image-url('loading.gif') no-repeat 50%;
         text-indent: -9999px;
     }
