Tiles are now links - no need to force cursor pointer

--- a/assets/scss/_tile.scss
+++ b/assets/scss/_tile.scss
@@ -9,12 +9,10 @@
         }
     }
     position: absolute;
-    font-size: 13px;
+    //font-size: 13px;
     background-color: #EEE;
     padding: 0;
     overflow: hidden;
-    cursor: pointer;
-
 }
 
 .wp-tiles-byline {
