--- a/assets/css/wp-tiles.css
+++ b/assets/css/wp-tiles.css
@@ -94,9 +94,37 @@
 /* line 4, ../scss/_template_selector.scss */
 .wp-tiles-template-selector {
   list-style: none;
+  overflow: hidden;
 }
-/* line 7, ../scss/_template_selector.scss */
-.wp-tiles-template-selector li {
+
+/* line 10, ../scss/_template_selector.scss */
+.wp-tiles-template {
+  border: none;
+  border-radius: 2px;
+  cursor: pointer;
+  font-weight: normal;
+  line-height: normal;
+  margin: 0 1em 1em 0;
+  float: left;
+  text-decoration: none;
+  text-align: center;
+  padding: 0.88889em 1.77778em 0.94444em;
+  font-size: 0.88889em;
+  background-color: #444444;
+  color: #FFF;
+  opacity: 1;
+  -moz-transition: opacity 300ms ease-out 0s;
+  -o-transition: opacity 300ms ease-out 0s;
+  -webkit-transition: opacity 300ms ease-out;
+  -webkit-transition-delay: 0s;
+  transition: opacity 300ms ease-out 0s;
+}
+/* line 43, ../scss/_template_selector.scss */
+.wp-tiles-template:hover {
+  opacity: 0.8;
+}
+/* line 51, ../scss/_template_selector.scss */
+.wp-tiles-legacy .wp-tiles-template {
   background-image: -moz-linear-gradient(#252525, #0a0a0a);
   background-image: -webkit-linear-gradient(#252525, #0a0a0a);
   background-image: linear-gradient(#252525, #0a0a0a);
@@ -108,8 +136,8 @@
   text-align: center;
   padding: 6px 9px;
 }
-/* line 18, ../scss/_template_selector.scss */
-.wp-tiles-template-selector li:hover {
+/* line 62, ../scss/_template_selector.scss */
+.wp-tiles-legacy .wp-tiles-template:hover {
   border: 1px solid #999999;
 }
 
@@ -141,24 +169,26 @@
 /* line 4, ../scss/_tile.scss */
 .wp-tiles-tile {
   position: absolute;
-  font-size: 13px;
   background-color: #EEE;
   padding: 0;
   overflow: hidden;
-  cursor: pointer;
 }
 /* line 5, ../scss/_tile.scss */
-.wp-tiles-tile.wp-tiles-legacy .wp-tiles-tile {
+.wp-tiles-legacy .wp-tiles-tile {
   -moz-box-shadow: 6px 6px 10px;
   -webkit-box-shadow: 6px 6px 10px;
   box-shadow: 6px 6px 10px;
 }
 /* line 7, ../scss/_tile.scss */
-.wp-tiles-tile.wp-tiles-legacy .wp-tiles-tile:hover {
+.wp-tiles-legacy .wp-tiles-tile:hover {
   outline: 1px solid #ccc;
 }
+/* line 17, ../scss/_tile.scss */
+.wp-tiles-tile a {
+  text-decoration: none;
+}
 
-/* line 20, ../scss/_tile.scss */
+/* line 22, ../scss/_tile.scss */
 .wp-tiles-byline {
   max-height: 100%;
   padding: 5px;
@@ -354,7 +384,7 @@
   text-align: center;
 }
 /* line 13, ../scss/_pagination.scss */
-.wp-tiles-pagination-ajax .loading {
+.wp-tiles-pagination-ajax.loading {
   background: url('../images/loading.gif?1399040924') no-repeat 50%;
   text-indent: -9999px;
 }
