--- a/assets/scss/wp-tiles.scss
+++ b/assets/scss/wp-tiles.scss
@@ -56,12 +56,15 @@
 }
 
 .wp-tiles-grid {
-    top: 0;
-    bottom: 0;
     width: 100%;
-    //height: 100%;
     position: relative;
     @include user-select ( none );
+
+    .wp-tiles-full-width & {
+        position: absolute;
+        left: 0;
+        right: 0;
+    }
 }
 
 
