--- a/assets/scss/_tile.scss
+++ b/assets/scss/_tile.scss
@@ -1,18 +1,32 @@
 /**************************************
     Tile Base Styles
  **************************************/
+
+// Make tiles inline-block if the JS doesn't kick in
+.wp-tiles-tile, .wp-tiles-tile-wrapper {
+    display: inline-block;
+    .wp-tiles-loaded & {
+        display: block;
+    }
+}
+
 .wp-tiles-tile {
+    width: 33%;
+    background-color: #EEE;
+    padding: 0;
+    overflow: hidden;
+
+    .wp-tiles-loaded & {
+        position: absolute;
+    }
+
+    // Legacy styles
     .wp-tiles-legacy & {
         @include box-shadow ( 6px 6px 10px );
         &:hover {
             outline: 1px solid #ccc;
         }
     }
-    position: absolute;
-    //font-size: 13px;
-    background-color: #EEE;
-    padding: 0;
-    overflow: hidden;
 
     a {
         text-decoration: none;
