Update font sizes on tiles to be relative (in ems)

--- a/assets/scss/_tile_image.scss
+++ b/assets/scss/_tile_image.scss
@@ -42,10 +42,9 @@
 
     .wp-tiles-byline-content {
         padding: 5px;
-        font-size: 10px;
-        font-weight: 600;
+        font-size: 0.9em;
+        font-weight: normal;
 
-        width: 90%;
         overflow: hidden;
 
     }
