--- a/assets/scss/_tile_text_only.scss
+++ b/assets/scss/_tile_text_only.scss
@@ -21,7 +21,7 @@
 
     .wp-tiles-byline-content {
         font-style: normal;
-        font-size: 14px;
-        font-weight: 600;
+        font-size: 1em;
+        font-weight: normal;
     }
 }
