Added color overlay image effect to WP Tiles

--- a/assets/scss/_animations_image.scss
+++ b/assets/scss/_animations_image.scss
@@ -60,3 +60,9 @@
         @extend %desaturate;
     }
 }
+
+.wp-tiles-image-color-overlay {
+    .wp-tiles-tile:hover .wp-tiles-tile-bg {
+        opacity: 0.3;
+    }
+}
